--- a/scss/components/_body.scss
+++ b/scss/components/_body.scss
@@ -25,13 +25,6 @@
     margin: 0 20px;
 }
 
-.pets-col {
-    @include flexy($dir: column, $align: center);
-    img {
-        margin: 2rem 0;
-    }
-}
-
 #adopt {
     margin: 0 20px;
 }
