--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -18,12 +18,12 @@
 }
 
 .adopt-buttons {
+    @include flexy($just: space-around, $wrap: wrap);
     padding: 1rem 0 3rem;
     border-bottom: 1px solid $border;
-    text-align: center;
     button {
     padding: 10px 30px;
-    margin: 0 .5rem;
+    margin: 1rem .5rem;
     border: 2px solid $pink;
     border-radius: 5px;
     background-color: $pink;
